// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structured console logging captures debug 1`] = `
Object {
  "stderr": Array [],
  "stdout": Array [
    "{\\"logLevel\\":\\"debug\\",\\"source\\":\\"/Users/wballard/embrace-sql-core/tests/structured-console.test.ts#20\\",\\"message\\":\\"Hello World\\",\\"additional\\":[[]]}",
  ],
}
`;

exports[`structured console logging captures error 1`] = `
Object {
  "stderr": Array [
    "{\\"logLevel\\":\\"error\\",\\"source\\":\\"/Users/wballard/embrace-sql-core/tests/structured-console.test.ts#38\\",\\"message\\":\\"Hello World\\",\\"additional\\":[[]]}",
  ],
  "stdout": Array [],
}
`;

exports[`structured console logging captures info 1`] = `
Object {
  "stderr": Array [],
  "stdout": Array [
    "{\\"logLevel\\":\\"info\\",\\"source\\":\\"/Users/wballard/embrace-sql-core/tests/structured-console.test.ts#26\\",\\"message\\":\\"Hello World\\",\\"additional\\":[[]]}",
  ],
}
`;

exports[`structured console logging captures log 1`] = `
Object {
  "stderr": Array [],
  "stdout": Array [
    "{\\"logLevel\\":\\"info\\",\\"source\\":\\"/Users/wballard/embrace-sql-core/tests/structured-console.test.ts#14\\",\\"message\\":\\"Hello World\\",\\"additional\\":[[]]}",
  ],
}
`;

exports[`structured console logging captures warn 1`] = `
Object {
  "stderr": Array [],
  "stdout": Array [
    "{\\"logLevel\\":\\"warn\\",\\"source\\":\\"/Users/wballard/embrace-sql-core/tests/structured-console.test.ts#32\\",\\"message\\":\\"Hello World\\",\\"additional\\":[[]]}",
  ],
}
`;
